--- a/index.html
+++ b/index.html
@@ -4,40 +4,58 @@
     <meta charset="utf-8">
     <title>VR Escape Room</title>
     <meta name="description" content="VR Escape Room - A-Frame">
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+    <!-- A-Frame Latest (1.7.1) -->
+    <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
+
+    <!-- Extras compatible with 1.7.x -->
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.6.0/dist/aframe-extras.min.js"></script>
+
+    <!-- Physics (community fork) compatible with modern A-Frame -->
+    <script src="https://cdn.jsdelivr.net/npm/@c-frame/aframe-physics-system@4.2.3/dist/aframe-physics-system.min.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@5.0.0/dist/aframe-event-set-component.min.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
-    <a-scene background="color: #000" vr-mode-ui="enabled: true">
+    <a-scene background="color: #000" vr-mode-ui="enabled: true" physics="gravity: -9.8">
         <!-- Assets -->
         <a-assets>
             <a-mixin id="wall" geometry="primitive: box; width: 1; height: 3; depth: 0.1" material="color: #8B4513"></a-mixin>
             <a-mixin id="floor" geometry="primitive: box; width: 1; height: 0.1; depth: 1" material="color: #654321"></a-mixin>
             <a-mixin id="interactable" animation__mouseenter="property: scale; to: 1.1 1.1 1.1; startEvents: mouseenter; dur: 200" animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 200"></a-mixin>
+
+            <!-- 3D Model - Downloaded Cat -->
+            <a-asset-item id="cat-model" src="./cat.glb"></a-asset-item>
+
+            <!-- Floor Lamp Model -->
+            <a-asset-item id="lamp-model" src="./floor_lamp.glb"></a-asset-item>
         </a-assets>
 
         <!-- Lighting -->
-        <a-light type="ambient" color="#404040" intensity="0.4"></a-light>
-        <a-light type="directional" position="2 4 2" color="#ffffff" intensity="0.8"></a-light>
-        <a-light type="point" position="0 2.5 0" color="#ffff88" intensity="0.6"></a-light>
+        <a-light type="ambient" color="#404040" intensity="0.3"></a-light>
+        <a-light type="directional" position="2 4 2" color="#ffffff" intensity="0.5"></a-light>
+
+        <!-- Floor Lamp Lighting -->
+        <a-light type="point" position="1.5 2.2 -1.5" color="#ffeb99" intensity="2.5" distance="12" decay="1.5"></a-light>
+        <a-light type="spot" position="1.5 2.2 -1.5" color="#ffe680" intensity="1.8" angle="60" penumbra="0.3" target="#lamp-light-target" distance="10"></a-light>
+
+        <!-- Invisible target for spot light -->
+        <a-entity id="lamp-light-target" position="1.5 0 -1.5"></a-entity>
 
         <!-- Room Structure -->
         <!-- Floor -->
-        <a-box position="0 -0.05 0" width="8" height="0.1" depth="8" material="color: #654321; roughness: 0.8"></a-box>
+        <a-box position="0 -0.05 0" width="8" height="0.1" depth="8" material="color: #654321; roughness: 0.8" static-body></a-box>
 
         <!-- Ceiling -->
-        <a-box position="0 3.05 0" width="8" height="0.1" depth="8" material="color: #333; roughness: 0.9"></a-box>
+        <a-box position="0 3.05 0" width="8" height="0.1" depth="8" material="color: #333; roughness: 0.9" static-body></a-box>
 
         <!-- Walls -->
-        <a-box position="0 1.5 -4" width="8" height="3" depth="0.2" material="color: #8B4513; roughness: 0.7"></a-box>
-        <a-box position="0 1.5 4" width="8" height="3" depth="0.2" material="color: #8B4513; roughness: 0.7"></a-box>
-        <a-box position="-4 1.5 0" width="0.2" height="3" depth="8" material="color: #8B4513; roughness: 0.7"></a-box>
-        <a-box position="4 1.5 0" width="0.2" height="3" depth="8" material="color: #8B4513; roughness: 0.7"></a-box>
+        <a-box position="0 1.5 -4" width="8" height="3" depth="0.2" material="color: #8B4513; roughness: 0.7" static-body></a-box>
+        <a-box position="0 1.5 4" width="8" height="3" depth="0.2" material="color: #8B4513; roughness: 0.7" static-body></a-box>
+        <a-box position="-4 1.5 0" width="0.2" height="3" depth="8" material="color: #8B4513; roughness: 0.7" static-body></a-box>
+        <a-box position="4 1.5 0" width="0.2" height="3" depth="8" material="color: #8B4513; roughness: 0.7" static-body></a-box>
 
         <!-- Door (locked initially) -->
-        <a-box id="door" position="0 1.5 3.9" width="1.5" height="2.5" depth="0.2" material="color: #4A4A4A; roughness: 0.3" class="door"></a-box>
+        <a-box id="door" position="0 1.5 3.9" width="1.5" height="2.5" depth="0.2" material="color: #4A4A4A; roughness: 0.3" class="door" static-body></a-box>
         <a-text position="0 2.2 3.8" value="LOCKED" align="center" color="red" scale="0.5 0.5 0.5"></a-text>
 
         <!-- Escape Room Objects -->
@@ -49,23 +67,44 @@
         <a-text position="-3 1.8 -3.85" value="🎨" align="center" color="white" scale="2 2 2"></a-text>
 
         <!-- Puzzle Box (requires key to open) -->
-        <a-box id="puzzlebox" position="2 1 2" width="0.8" height="0.5" depth="0.8" material="color: #CD853F" mixin="interactable" class="puzzlebox"></a-box>
+        <a-box id="puzzlebox" position="2 1 2" width="0.8" height="0.5" depth="0.8" material="color: #CD853F" mixin="interactable" class="puzzlebox" static-body></a-box>
         <a-text position="2 1.4 2" value="🔒" align="center" color="black" scale="1.5 1.5 1.5"></a-text>
 
         <!-- Safe (requires code from puzzle box) -->
-        <a-box id="safe" position="3 0.75 -2" width="1" height="1.5" depth="0.8" material="color: #2F4F4F" class="safe"></a-box>
+        <a-box id="safe" position="3 0.75 -2" width="1" height="1.5" depth="0.8" material="color: #2F4F4F" class="safe" static-body></a-box>
         <a-text position="3 1.8 -2" value="SAFE\n[0000]" align="center" color="white" scale="0.4 0.4 0.4"></a-text>
 
         <!-- Exit Key (in safe) -->
         <a-cylinder id="exitkey" position="3 1.2 -1" radius="0.08" height="0.3" material="color: silver; metalness: 0.8; roughness: 0.2" mixin="interactable" class="exitkey" visible="false"></a-cylinder>
 
+        <!-- 3D Cat Model -->
+        <a-gltf-model
+            id="decorative-cat"
+            src="#cat-model"
+            position="-2 1.0 1"
+            scale="0.3 0.3 0.3"
+            rotation="0 0 0"
+            animation="property: rotation; to: 0 360 0; dur: 12000; loop: true">
+        </a-gltf-model>
+
+        <!-- Floor Lamp Model -->
+        <a-gltf-model
+            id="floor-lamp"
+            src="#lamp-model"
+            position="1.5 1 -1.5"
+            scale="1 1 1"
+            rotation="0 0 0"
+            static-body>
+        </a-gltf-model>
+
         <!-- Hints and Clues -->
         <a-text position="-2 2 -3.9" value="Find the hidden key..." align="center" color="white" scale="0.3 0.3 0.3"></a-text>
         <a-text position="2 0.5 2" value="This box needs a key" align="center" color="white" scale="0.2 0.2 0.2"></a-text>
+        <a-text position="-2 0.6 1" value="Cute Cat" align="center" color="pink" scale="0.2 0.2 0.2"></a-text>
 
         <!-- VR Controls -->
-        <a-entity id="rig" movement-controls position="0 1.6 2">
-            <a-entity camera look-controls wasd-controls>
+        <a-entity id="rig" movement-controls="constrainToNavMesh: false; camera: [camera]" kinematic-body="radius: 0.3; height: 1.6; offset: 0 0.8 0" position="0 1.6 2">
+            <a-entity camera look-controls>
                 <a-cursor position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03" material="color: white; shader: flat" raycaster="objects: .painting, .key, .puzzlebox, .safe, .door, .exitkey; showLine: true"></a-cursor>
             </a-entity>
             <a-entity id="leftHand" hand-controls="hand: left; handModelStyle: lowPoly; color: #ffcccc"></a-entity>
