--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>VR Escape Room</title>
     <meta name="description" content="VR Escape Room - A-Frame">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <!-- A-Frame -->
     <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
