--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
             color="red" scale="0.5 0.5 0.5"></a-text>
 
     <!-- Escape Room Objects -->
-    <a-cylinder id="key" position="-3 1.8 -3.8" radius="0.05" height="0.3"
+    <a-cylinder id="key" position="-3 1.8 -3.5" radius="0.05" height="0.3"
                 material="color: gold" class="key"
                 visible="false"></a-cylinder>
 
-    <a-box id="painting" position="-3 1.8 -3.9" width="1" height="0.8"
-           depth="0.05"
-           material="color: #8B008B" class="painting"></a-box>
-    <a-text position="-3 1.8 -3.85" value="🎨" align="center"
-            color="white" scale="2 2 2"></a-text>
+    <a-box id="painting" position="-3 1.8 -3.7" width="1.2" height="1"
+           depth="0.1"
+           material="color: #8B008B; roughness: 0.3" class="painting"></a-box>
+    <a-text position="-3 1.8 -3.65" value="🎨" align="center"
+            color="white" scale="2.5 2.5 2.5"></a-text>
 
     <a-box id="puzzlebox" position="2 1 2" width="0.8" height="0.5" depth="0.8"
            material="color: #CD853F" class="puzzlebox"></a-box>
