added Interface for VR and PC

--- a/src/room3/room3.html
+++ b/src/room3/room3.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/aframe-look-at-component@1.0.0/dist/aframe-look-at-component.min.js"></script>
 
     <script src="../shared/movement.js"></script>
+    <script src="../shared/components.js"></script>
     <script src="room3.js"></script>
 
 </head>
